kops/statefulsets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: adf4f85343724471da0e04fc40b4adaf-1728405388.us-east-2.elb.amazonaws.com
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 8081
            path: /
            pathType: Prefix
